--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -10,6 +10,7 @@
             "concurrent"
         ],
         "runtime": "python3.12",
+	"profile_name": "default",
         "s3_bucket": "andrew-perkins-in-usa-zappa",
 	"keep_warm": false, // Create CloudWatch events to keep the server warm. Default true. To remove, set to false and then `unschedule`.
 	"log_level": "DEBUG",
