--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
       - source venv/bin/activate
       - pip install -r requirements.txt
       - pip install zappa
+      - pip install setuptools
 
   pre_build:
     commands:
