--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
       - source venv/bin/activate
       - pip install -r requirements.txt
       - pip install zappa
+      - pip install distutils
 
   pre_build:
     commands:
