--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
         - virtualenv venv
         - source venv/bin/activate
         - echo "Ensuring setuptools inside venv is also downgraded..."
-        - pip install "setuptools<=68.0.0"  # ✅ Fix applies inside venv
+        - pip install "setuptools<=68.0.0"  # Fix applies inside venv
         - pip show setuptools
         - pip install -r requirements.txt
         - pip install zappa
